# ilcdlib

./: .flake8  .gitignore  .pip.conf.template  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.md  Makefile  README.md  poetry.toml  pyproject.toml  requirements-dev.txt
.github/workflows/: build-and-publish-wheel.yml  generate-changelog.yml  release.yml  sanity-check.yml
development/: ilcdtool.py  install-cli-commands.sh  run-batch-convertion.py
doc/: dev-guide.md  release.md
src/ilcdlib/: __main__.py  __version__.py  cli.py  common.py  const.py  dto.py  extension.py  http.py  http_common.py  reference_data.py  type.py  utils.py  xml_parser.py
src/ilcdlib/bulk/: data_provider.py
src/ilcdlib/compat/: pydantic.py
src/ilcdlib/data/category_mapping/: epdnorge.csv  oekobaudat.csv
src/ilcdlib/entity/: base_scope_set_reader.py  category.py  compliance.py  contact.py  exchage.py  flow.py  lcia.py  material.py  pcr.py  source.py  test_contact.py  test_lcia.py  test_material.py  unit.py  validation.py
src/ilcdlib/epd/: cli.py  declaration_convertor.py  factory.py  reader.py  test_epd_reader.py
src/ilcdlib/epd/dialect/: environdec.py  epddenmark.py  epditaly.py  epdnorge.py  indata.py  itb.py  oekobaudat.py
src/ilcdlib/html/: api_client.py
src/ilcdlib/mapping/: category.py  common.py  compliance.py  flows.py  impacts.py  indicators.py  properties.py  units.py
src/ilcdlib/medium/: archive.py  soda4lca.py  test_archive.py  test_soda4lca.py
src/ilcdlib/sanitizing/: domain.py  phone.py  test_sanitizing.py  text.py
src/ilcdlib/soda4lca/: api_client.py  api_client_4x.py
src/test_data/: environdec_single_xml.xml
