[project]
name = "ilcdlib"
version = "5.1.1"
license = "Apache-2.0"
description = "A toolkit for reading and writing ILCD format and it's derivatives"
authors = [{ name = "WAP Sustainability", email = "support@wapsustainability.com" }]
maintainers = [{ name = "WAP Sustainability", email = "support@wapsustainability.com" }]
keywords = ["ilcd", "lca", "openepd"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
requires-python = '>=3.11,<4.0'

[project.urls]
GitHub = "https://github.com/cchangelabs/ilcdlib"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "ilcdlib", from = "src" }]
exclude = ["**/test_*.py"]

[tool.poetry.scripts]
ilcdtool = { callable = "ilcdlib:cli.entrypoint" }

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
urllib3 = { version = ">=1.26.17,<3.0.0" }
requests = { version = ">=2.1.0,<3.0.0" }
openepd = { version = ">=7.0.1,<=8.0.0" }
pytz = { version = ">=2023.3" }
cli-rack = { version = ">=1.0.6" }
lxml = { version = ">=4.9.2" }
pydantic = ">=2.0,<3"

[tool.poetry.group.dev.dependencies]
wheel = { version = "~=0.40.0" }
# Unit tests
coverage = { version = "=6.5", extras = ["toml"] }
pytest = "~=7.2"
pytest-subtests = "~=0.4"
pytest-cov = "~=4.0"
teamcity-messages = ">=1.31"
lxml-stubs = { version = ">=0.4.0" }
types-requests = { version = ">=2.1.0" }

# Dev tools
ruff = ">=0.13.0"
licenseheaders = ">=0.8"
mypy = ">=1.18.1"
pre-commit = "~=3.8"
commitizen = ">=4.9,<5.0"

# Type checking
types-dateparser = ">=1.1.3"
types-deprecated = ">=1.2.9"
types-urllib3 = ">=1.26.2"
types-pytz = ">=2023.1"

[tool.commitizen]
version_provider = "pep621"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
pre_bump_hooks = []
version_files = [
    "src/ilcdlib/__version__.py",
]

# Tests and Coverage
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--maxfail=50"
python_files = ["test_*.py"]
required_plugins = ["pytest-subtests", "pytest-cov"]
testpaths = ["src"]

[tool.coverage.run]
branch = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "coverage_report/htmlcov"

[tool.mypy]
python_version = "3.11"
show_error_codes = true
ignore_errors = false
warn_return_any = false
disallow_any_generics = false
pretty = true
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"
exclude = ["test_.*\\.py$", ]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# External libs which doesn't have type hints (py.typed marker)
module = ["cli_rack.*"]
ignore_missing_imports = true
follow_imports = "skip"


[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".*pyi"]

[tool.ruff.lint.isort]
known-third-party = ["openepd", "ccl_common", "cqd_datamodel"]
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
"**.pyi" = ["UP"]
"test_*.py" = ["D103", "D104", "D100", "D101", "D102", "D106"]
"__version__.py" = ["D104", "D100", "D101", "D102"]
"**/settings/*.py" = ["F405"]

[tool.ruff.lint]
extend-ignore = [
    "S101", # Use of assert statement. We have a lot of asserts for mypy type checking.
    "S324", # We cannot ignore sha1 hash in codebase because it is used by box.com

    "D202",
    # W504 line break after binary operator
    ##### DOCSTRINGS #####
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Missing docstring in magic method
    "D105",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public nested class
    "D106",
    # One black line required before class docstring
    "D203",
    #`no-blank-line-before-class
    "D211",
    # Multi-line docstring summary should start at the second line
    "D212",
    # Multi-line docstring summary should start at the first line
    "D213",
    # Raw string in exception
    "EM101",
    # f-string in exception
    "EM102",
    "B027",
    "B024",
    "S110",
]
extend-select = ["S", "E", "B", "A", "EM", "UP"]

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 15.
max-complexity = 10
